@@ -2616,7 +2616,7 @@ License (GPL).</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 1.0.2<br />
+Version 1.0.3-dev<br />
 Last updated 2011-03-19 13:18:41 CEST
 </div>
 </div>
